# Raytracer

./: .gitignore  CMakeLists.txt  README.md  camera.h  light.h  lightray.h  m128Utils.h  main.cpp  materials.h  memprep.h  objects.h  physicsmovie.py  render.ppm  rendersettings.h  scene.h  test.scene  tools.h
Documentation/: data_oriented.md  load_balancing.md  rendersettings.xml  stichpunkte_paper.md  task_based_parallelism.md  test.scene  test.xml  vectorization.md
Include/: camera.h  lightray.h  m128Utils.h  materials.h  memprep.h  rendersettings.h  rendertools.h  scene.h  tools.h
Paper/: main.tex
Templates/: cornell.scene  settings_default.xml  settings_quality.xml  settings_testing.xml  template.scene  template_settings.xml
Tests/: tests_m128Utils.cpp  tests_tools.cpp
